--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  /* Chrome, Safari and Opera */
+  .scrollbar-hidden::-webkit-scrollbar {
+    display: none;
+  }
+
+  .scrollbar-hidden {
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE and Edge */
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  /* border: 1px solid white; */
 }
 
 body {
